# learn-docker

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: ci.yml  docker-image.yml
cmake/: FindSDL2.cmake  ewarm.cmake
docker/: Dockerfile.linux-ci
include/egfx/: dummy.hpp
simulator/: main.cpp
src/: dummy.cpp
tests/: test_dummy.cpp
